--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,9 @@ span{
 .hoverable{
     cursor: pointer;
 }
+.hoverable:active{
+    background-color: rgb(39, 39, 39);
+}
 
 .right-side{
     grid-row: 2;
