--- a/css/styles.css
+++ b/css/styles.css
@@ -1,65 +1,122 @@
-body{
-    background-color: rgb(19, 19, 19);
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
+
 * {
-    color: rgb(208, 208, 208);
-    font-size: 30px;
+    color: rgb(221, 221, 221);
 
-    padding: 0;
-    margin: 0;
-
+    line-height: 1.5;
+    padding: 0px;
+    margin: 0px;
     box-sizing: border-box;
+
+    overflow: hidden;
+
+    /* annoying when misclick dragging the mouse */
+    user-select: none;
+
+    font-family: "Teko", sans-serif;
 }
 #root-container{
     height: 100vh;
-    max-width: 100vw;
+    width: 100vw;
 
     display: grid;
-    grid-template-rows: 10vh 1fr;
-    grid-template-columns: 70vw 1fr;
+    grid-template-rows: 1fr;
+    grid-template-columns: auto auto;
+
+    background-color: rgb(17, 17, 17);
 }
 
-h1{
-    grid-row: 1;
-    grid-column: 1 / span 2;
-
-    background-color: brown;
-}
-
+/* main */
 .main-container{
-    grid-row: 2;
+
+    grid-row: 1;
     grid-column: 1;
+
+    max-height: 100vh;
+    width: 85vw;
     
     display: grid;
+    grid-template-rows: auto 1fr;
+    grid-template-columns: 1fr;
 
     align-content: center;
     justify-content: center;
+
+    justify-items: center;
 }
-.sudoku-board{
-    height: 100%;
+
+/* nav */
+.main-container .nav{
     width: 100%;
+    height: 100%;
+    grid-row: 1;
+    grid-column: 1;
+
+    display: grid;
+    grid-template-columns: 4fr 3fr 4fr;
+    grid-template-rows: 1fr;
+
+    background-color: rgb(10, 10, 10);
+}
+.nav *{
+    align-self: center;
+    justify-self: center;
+
+    text-align: center;
+
+    text-decoration: none;
+    background-color: rgb(10, 10, 10);
+
+    border: none;
+}
+.nav h1{
+    grid-column: 2;
+    cursor: pointer;
+
+    font-size: 54px;
+}
+.nav span{
+    font-size: 60px;
+}
+
+
+/* commiting sudoku */
+.sudoku-board{
+    width: 85vh;
+    height: 80vh;
+
+    align-self: center;
+
+    grid-row: 2;
+    grid-column: 1;
 
     display: grid;
 
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
 
-    outline: 2px solid rgb(232, 232, 232);
+    outline: 3px solid rgb(150, 150, 150);
 }
 .sudoku-subboard{
-    width: 25vh;
-    height: 25vh;
+    width: 100%;
+    height: 100%;
 
     display: grid;
 
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
 
-    outline: 1px solid rgb(213, 213, 213);
+    outline: 3px solid rgb(150, 150, 150);
+
+    border-radius: 4px;
 }
 span{
+    font-family: 'Roboto Mono', monospace;
+
     height: 100%;
     width: 100%;
+
+    font-size: 36px;
     font-weight: 500;
 
     text-align: center;
@@ -68,22 +125,81 @@ span{
     align-self: center;
     justify-self: center;
 
-    border: 1px solid rgb(96, 96, 96);
+    border: 1px solid rgb(74, 74, 74);
 
-    user-select: none;
-
-    background-color: rgb(48, 48, 48);
+    background-color: rgb(27, 27, 27);
 }
 .hoverable{
     cursor: pointer;
+
+    /* display: block;
+    overflow: scroll; */
 }
 .hoverable:active{
-    background-color: rgb(39, 39, 39);
+    background-color: rgb(29, 29, 29);
 }
 
-.right-side{
+/* winning sudoku */
+.winning-container{
+    width: 80vh;
+    height: 80vh;
+
+    align-self: center;
+
     grid-row: 2;
+    grid-column: 1;
+
+    display: grid;
+
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr auto auto 1fr;
+
+    align-items: center;
+    justify-items: center;
+}
+.winning-container h1{
+
+    font-size: 60px;
+    animation: glow 2s ease-in-out infinite alternate;
+}
+
+@keyframes glow {
+    from {
+      text-shadow: 0 0 10px #a5a5a5;
+    }
+    to {
+      text-shadow: 0 0 10px #ff0000, 0 0 4px #ff0000;
+    }
+  }
+
+/* right part */
+.right-side{
+
+    max-height: 100vh;
+    width: 15vw;
+
+    grid-row: 1;
     grid-column: 2;
 
-    background-color: crimson;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 3fr 1fr;
+
+    background-color: rgb(10, 10, 10);
+}
+.right-side button{
+    background-color: rgb(10, 10, 10);
+
+    width: 10vw;
+    height: 40px;
+    font-size: 18px;
+
+    align-self: center;
+    justify-self: center;
+
+    cursor: pointer;
+}
+.right-side a{
+    text-align: center;
+    font-size: 18px;
 }
