--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,7 @@
     grid-template-rows: 1fr 1fr 1fr;
 
     outline: 3px solid rgb(150, 150, 150);
+
 }
 .sudoku-subboard{
     width: 100%;
@@ -117,7 +118,7 @@ span{
     width: 100%;
 
     font-size: 36px;
-    font-weight: 500;
+    font-weight: 600;
 
     text-align: center;
     text-justify: center;
@@ -141,7 +142,7 @@ span{
 
 /* winning sudoku */
 .winning-container{
-    width: 80vh;
+    width: 85vh;
     height: 80vh;
 
     align-self: center;
@@ -158,7 +159,6 @@ span{
     justify-items: center;
 }
 .winning-container h1{
-
     font-size: 60px;
     animation: glow 2s ease-in-out infinite alternate;
 }
@@ -202,4 +202,86 @@ span{
 .right-side a{
     text-align: center;
     font-size: 18px;
+}
+
+
+
+@media screen and (max-width: 1440px){
+    span{
+        font-size: 30px;
+        line-height: 1.8;
+    }
+}
+
+@media screen and (max-width: 1080px){
+    .nav h1{
+        font-size: 40px;
+    }
+    .nav span{
+        font-size: 40px;
+    }
+    span{
+        font-size: 30px;
+        line-height: 1.2;
+    }
+
+    .sudoku-board{
+        width: 400px;
+        height: 400px;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .nav h1{
+        font-size: 30px;
+    }
+    .nav span{
+        font-size: 30px;
+    }
+    span{
+        font-size: 24px;
+        line-height: 1.7;
+    }
+
+    .right-side button, .right-side a{
+        font-size: 14px;
+
+        height: auto;
+    }
+}
+
+@media screen and (max-width: 550px){
+    .nav h1{
+        font-size: 24px;
+    }
+    .nav span{
+        font-size: 24px;
+    }
+    span{
+        font-size: 20px;
+        line-height: 2;
+    }
+
+    .sudoku-board{
+        width: 350px;
+        height: 350px;
+    }
+}
+
+@media screen and (max-width: 550px){
+    .nav h1{
+        font-size: 22px;
+    }
+    .nav span{
+        font-size: 22px;
+    }
+    span{
+        font-size: 16px;
+        line-height: 1.5;
+    }
+
+    .sudoku-board{
+        width: 250px;
+        height: 250px;
+    }
 }
