--- a/css/styles.css
+++ b/css/styles.css
@@ -96,8 +96,10 @@
     grid-template-rows: 1fr 1fr 1fr;
 
     outline: 3px solid rgb(150, 150, 150);
+    z-index: 2;
 
 }
+
 .sudoku-subboard{
     width: 100%;
     height: 100%;
