--- a/css/styles.css
+++ b/css/styles.css
@@ -119,6 +119,8 @@ span{
     height: 100%;
     width: 100%;
 
+    line-height: normal;
+
     font-size: 36px;
     font-weight: 600;
 
@@ -211,7 +213,6 @@ span{
 @media screen and (max-width: 1440px){
     span{
         font-size: 30px;
-        line-height: 1.3;
     }
 }
 
@@ -224,7 +225,6 @@ span{
     }
     span{
         font-size: 30px;
-        line-height: 1.3;
     }
 
     .sudoku-board{
@@ -242,7 +242,6 @@ span{
     }
     span{
         font-size: 24px;
-        line-height: 1.6;
     }
 
     .right-side button, .right-side a{
@@ -261,7 +260,6 @@ span{
     }
     span{
         font-size: 20px;
-        line-height: 2;
     }
 
     .sudoku-board{
@@ -279,7 +277,6 @@ span{
     }
     span{
         font-size: 16px;
-        line-height: 1.5;
     }
 
     .sudoku-board{
