--- a/css/styles.css
+++ b/css/styles.css
@@ -138,7 +138,7 @@ span{
     align-self: center;
     justify-self: center;
 
-    color: #a9c8dc;
+    color: #dde9f0;
 
     border: 1px solid rgb(72, 96, 95);
 
