--- a/src/styles.css
+++ b/src/styles.css
@@ -154,6 +154,7 @@ span{
 
 /* winning sudoku */
 .winning-container{
+
     width: 85vh;
     height: 80vh;
 
@@ -163,7 +164,7 @@ span{
     grid-row: 2;
     grid-column: 1;
 
-    display: grid;
+    display: none;
 
     grid-template-columns: 1fr;
     grid-template-rows: 1fr auto auto 1fr;
@@ -171,7 +172,7 @@ span{
     align-items: center;
     justify-items: center;
 
-    background-image: url('./images/lol.webp');
+    /* background-image: url('./images/lol.webp'); */
     background-size: contain;
     background-repeat: no-repeat;
 }
