--- a/src/styles.css
+++ b/src/styles.css
@@ -1,23 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
-
 * {
     color: rgb(218, 231, 242);
     border: none;
-
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
-
     overflow: hidden;
+    font-family: "Teko", sans-serif;
 
     /* annoying when misclick dragging the mouse */
     user-select: none;
-
-    font-family: "Teko", sans-serif;
 }
-#root-container{
+#root{
     height: 100vh;
-    width: 100vw;
+    max-width: 100vw;
 
     display: grid;
     grid-template-rows: 1fr;
@@ -31,7 +27,7 @@
     background-color: #03191e;
 }
 
-/* main */
+/* main page content */
 .main-container{
 
     grid-row: 1;
@@ -50,7 +46,7 @@
     justify-items: center;
 }
 
-/* nav */
+/* nav content */
 .main-container .nav{
     width: 100%;
     height: 100%;
@@ -92,7 +88,7 @@
 }
 
 
-/* commiting sudoku */
+/* sudoku board content */
 .sudoku-board{
     width: 80vh;
     height: 80vh;
@@ -152,7 +148,7 @@ span{
     background-color: #062a32;
 }
 
-/* winning sudoku */
+/* winning sudoku content */
 .winning-container{
 
     width: 85vh;
@@ -247,12 +243,12 @@ span{
 img{
     filter: contrast(50%);
 }
+/* design responsiveness  */
 @media screen and (max-width: 1440px){
     span{
         font-size: 34px;
     }
 }
-
 @media screen and (max-width: 1080px){
     .nav h1{
         font-size: 40px;
@@ -269,7 +265,6 @@ img{
         height: 80vh;
     }
 }
-
 @media screen and (max-width: 768px){
     .nav h1{
         font-size: 26px;
@@ -293,7 +288,6 @@ img{
         font-size: 12px;
     }
 }
-
 @media screen and (max-width: 550px){
     #root-container{
         grid-template-rows: 1fr auto;
