--- a/src/styles.css
+++ b/src/styles.css
@@ -1,332 +1,328 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
 * {
-    color: rgb(218, 231, 242);
-    border: none;
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
-    overflow: hidden;
-    font-family: "Teko", sans-serif;
+  color: rgb(218, 231, 242);
+  border: none;
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+  overflow: hidden;
+  font-family: 'Teko', sans-serif;
 
-    /* annoying when misclick dragging the mouse */
-    user-select: none;
+  /* annoying when misclick dragging the mouse */
+  user-select: none;
 }
-#root{
-    height: 100vh;
-    max-width: 100vw;
+#root {
+  height: 100vh;
+  max-width: 100vw;
 
-    display: grid;
-    grid-template-rows: 1fr;
-    grid-template-columns: auto auto;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: auto auto;
 
-    background-color: #03191e;
+  background-color: #03191e;
 }
-.loading{
-    height: fit-content;
-    width: fit-content;
-    background-color: #03191e;
+.loading {
+  height: fit-content;
+  width: fit-content;
+  background-color: #03191e;
 }
 
 /* main page content */
-.main-container{
+.main-container {
+  grid-row: 1;
+  grid-column: 1;
 
-    grid-row: 1;
-    grid-column: 1;
+  max-height: 100vh;
+  width: 85vw;
 
-    max-height: 100vh;
-    width: 85vw;
-    
-    display: grid;
-    grid-template-rows: auto 1fr;
-    grid-template-columns: 1fr;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  grid-template-columns: 1fr;
 
-    align-content: center;
-    justify-content: center;
+  align-content: center;
+  justify-content: center;
 
-    justify-items: center;
+  justify-items: center;
 }
 
 /* nav content */
-.main-container .nav{
-    width: 100%;
-    height: 100%;
-    grid-row: 1;
-    grid-column: 1;
+.main-container .nav {
+  width: 100%;
+  height: 100%;
+  grid-row: 1;
+  grid-column: 1;
 
-    display: grid;
-    grid-template-columns: 4fr 3fr 4fr;
-    grid-template-rows: 1fr;
+  display: grid;
+  grid-template-columns: 4fr 3fr 4fr;
+  grid-template-rows: 1fr;
 
-    background-color: #03191e;;
+  background-color: #03191e;
 }
-.nav *{
-    align-self: center;
-    justify-self: center;
+.nav * {
+  align-self: center;
+  justify-self: center;
 
-    text-align: center;
+  text-align: center;
 
-    text-decoration: none;
-    background-color: #03191e;;
+  text-decoration: none;
+  background-color: #03191e;
 
-    border: none;
+  border: none;
 }
-.nav h1{
-    grid-column: 2;
-    cursor: pointer;
+.nav h1 {
+  grid-column: 2;
+  cursor: pointer;
 
-    font-size: 54px;
+  font-size: 54px;
 
-    align-self: end;
-    text-align: end;
+  align-self: end;
+  text-align: end;
 }
-.nav span{
-    font-size: 60px;
+.nav span {
+  font-size: 60px;
 }
-.nav *:hover{
-    color: rgb(56, 174, 244)
-    
+.nav *:hover {
+  color: rgb(56, 174, 244);
 }
-
 
 /* sudoku board content */
-.sudoku-board{
-    width: 80vh;
-    height: 80vh;
+.sudoku-board {
+  width: 80vh;
+  height: 80vh;
 
-    align-self: center;
+  align-self: center;
 
-    grid-row: 2;
-    grid-column: 1;
+  grid-row: 2;
+  grid-column: 1;
 
-    display: grid;
+  display: grid;
 
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
 
-    outline: 3px solid rgb(132, 158, 162);
-    z-index: 2;
+  outline: 3px solid rgb(132, 158, 162);
+  z-index: 2;
 
-    background-color: #03191e;
+  background-color: #03191e;
 }
 
-.sudoku-subboard{
-    width: 100%;
-    height: 100%;
+.sudoku-subboard {
+  width: 100%;
+  height: 100%;
 
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
 
-    outline: 3px solid rgb(132, 158, 162);
-    border-radius: 4px;
+  outline: 3px solid rgb(132, 158, 162);
+  border-radius: 4px;
 }
-span{
-    font-family: 'Roboto Mono', monospace;
+span {
+  font-family: 'Roboto Mono', monospace;
 
-    width: 100%;
-    display: flex;
-    height: 100%;
+  width: 100%;
+  display: flex;
+  height: 100%;
 
-    font-size: 36px;
-    font-weight: 500;
+  font-size: 36px;
+  font-weight: 500;
 
-    align-items: center;
-    justify-content:center;
-    color: #dde9f0;
+  align-items: center;
+  justify-content: center;
+  color: #dde9f0;
 
-    border: 1px solid rgb(72, 96, 95);
+  border: 1px solid rgb(72, 96, 95);
 
-    background-color: rgb(6, 48, 58);
+  background-color: rgb(6, 48, 58);
 }
-.hoverable{
-    cursor: pointer;
+.hoverable {
+  cursor: pointer;
 
-    /* display: block;
+  /* display: block;
     overflow: scroll; */
 }
-.hoverable:active{
-    background-color: #062a32;
+.hoverable:active {
+  background-color: #062a32;
 }
 
 /* winning sudoku content */
-.winning-container{
+.winning-container {
+  width: 85vh;
+  height: 80vh;
 
-    width: 85vh;
-    height: 80vh;
+  align-self: center;
+  border-radius: 4px;
 
-    align-self: center;
-    border-radius: 4px;
+  grid-row: 2;
+  grid-column: 1;
 
-    grid-row: 2;
-    grid-column: 1;
+  display: none;
 
-    display: none;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr auto auto 1fr;
 
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr auto auto 1fr;
+  align-items: center;
+  justify-items: center;
 
-    align-items: center;
-    justify-items: center;
-
-    /* background-image: url('./images/lol.webp'); */
-    background-size: contain;
-    background-repeat: no-repeat;
+  /* background-image: url('./images/lol.webp'); */
+  background-size: contain;
+  background-repeat: no-repeat;
 }
-.winning-container h1{
-    width: 100%;
-    text-align: center;
-    padding: 10px;
-    background-color: #03191e;
-    font-size: 60px;
-    animation: glow 2s ease-in-out infinite alternate;
+.winning-container h1 {
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+  background-color: #03191e;
+  font-size: 60px;
+  animation: glow 2s ease-in-out infinite alternate;
 }
-.winning-container *{
-    width: 100%;
+.winning-container * {
+  width: 100%;
 }
-.winning-container h2{
-    text-align: center;
-    background-color: #03191e;
-    padding: 10px;
+.winning-container h2 {
+  text-align: center;
+  background-color: #03191e;
+  padding: 10px;
 }
 
 @keyframes glow {
-    from {
-      text-shadow: 0 0 10px #a5a5a5;
-    }
-    to {
-      text-shadow: 0 0 10px #ff0000, 0 0 4px #ff0000;
-    }
+  from {
+    text-shadow: 0 0 10px #a5a5a5;
+  }
+  to {
+    text-shadow: 0 0 10px #ff0000, 0 0 4px #ff0000;
+  }
 }
 
 /* right part */
-.right-side{
+.right-side {
+  max-height: 100vh;
+  width: 15vw;
 
-    max-height: 100vh;
-    width: 15vw;
+  grid-row: 1;
+  grid-column: 2;
 
-    grid-row: 1;
-    grid-column: 2;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 4fr 2fr;
 
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 4fr 2fr; 
-
-    background-color: #03191e;;
+  background-color: #03191e;
 }
-.right-side button{
-    outline: 2px solid rgb(132, 158, 162);
-    background-color: rgb(6, 48, 58);
+.right-side button {
+  outline: 2px solid rgb(132, 158, 162);
+  background-color: rgb(6, 48, 58);
 
-    width: 50%;
-    max-width: 54px;
-    height: 24px;
-    font-size: 18px;
+  width: 50%;
+  max-width: 54px;
+  height: 24px;
+  font-size: 18px;
 
-    align-self: center;
-    justify-self: center;
+  align-self: center;
+  justify-self: center;
 
-    text-align: center;
-    text-justify: center;
+  text-align: center;
+  text-justify: center;
 
-    cursor: pointer;
+  cursor: pointer;
 }
-.right-side button:hover, .right-side a:hover{
-    color: rgb(56, 174, 244)
+.right-side button:hover,
+.right-side a:hover {
+  color: rgb(56, 174, 244);
 }
-.right-side a{
-    text-align: center;
-    font-size: 18px;
-    height: 24px;
+.right-side a {
+  text-align: center;
+  font-size: 18px;
+  height: 24px;
 }
 
-
-img{
-    filter: contrast(50%);
+img {
+  filter: contrast(50%);
 }
 /* design responsiveness  */
-@media screen and (max-width: 1440px){
-    span{
-        font-size: 34px;
-    }
+@media screen and (max-width: 1440px) {
+  span {
+    font-size: 34px;
+  }
 }
-@media screen and (max-width: 1080px){
-    .nav h1{
-        font-size: 40px;
-    }
-    .nav span{
-        font-size: 40px;
-    }
+@media screen and (max-width: 1080px) {
+  .nav h1 {
+    font-size: 40px;
+  }
+  .nav span {
+    font-size: 40px;
+  }
 
-    span{
-        font-size: 32px;
-    }
-    .sudoku-board{
-        width: 80vh;
-        height: 80vh;
-    }
+  span {
+    font-size: 32px;
+  }
+  .sudoku-board {
+    width: 80vh;
+    height: 80vh;
+  }
 }
-@media screen and (max-width: 768px){
-    .nav h1{
-        font-size: 26px;
-    }
-    .nav span{
-        font-size: 30px;
-    }
-    span{
-        font-size: 32px;
-        font-weight: 500;
-    }
+@media screen and (max-width: 768px) {
+  .nav h1 {
+    font-size: 26px;
+  }
+  .nav span {
+    font-size: 30px;
+  }
+  span {
+    font-size: 32px;
+    font-weight: 500;
+  }
 
-    .right-side button{
-        height: 16px;
-        font-size: 12px;
-        width: 40px;
-    }
+  .right-side button {
+    height: 16px;
+    font-size: 12px;
+    width: 40px;
+  }
 
-    .right-side button, .right-side a{
-        height: 16px;
-        font-size: 12px;
-    }
+  .right-side button,
+  .right-side a {
+    height: 16px;
+    font-size: 12px;
+  }
 }
-@media screen and (max-width: 550px){
-    #root-container{
-        grid-template-rows: 1fr auto;
-        grid-template-columns: 1fr;
-    }
-    .main-container{
-        max-height: 95vh;
-        width: 100%;
-        grid-column: 1;
-        grid-row: 1;
-    }
-    .nav h1{
-        font-size: 18px;
-    }
-    .nav span{
-        font-size: 22px;
-    }
+@media screen and (max-width: 550px) {
+  #root-container {
+    grid-template-rows: 1fr auto;
+    grid-template-columns: 1fr;
+  }
+  .main-container {
+    max-height: 95vh;
+    width: 100%;
+    grid-column: 1;
+    grid-row: 1;
+  }
+  .nav h1 {
+    font-size: 18px;
+  }
+  .nav span {
+    font-size: 22px;
+  }
 
-    span{
-        font-size: 24px;
-    }
+  span {
+    font-size: 24px;
+  }
 
-    .sudoku-board{
-        width: 80vw;
-        height: 80vw;
-    }
+  .sudoku-board {
+    width: 80vw;
+    height: 80vw;
+  }
 
-    .right-side{
-        grid-row: 2;
-        grid-column: 1;
-        width: 100%;
-    }
-    .right-side *{
-        width: 50%;
-        margin: 2px;
-        padding: 0px;
-        background-color: #00000000;
-    }
-    .right-side a{
-        display: none;
-    }
+  .right-side {
+    grid-row: 2;
+    grid-column: 1;
+    width: 100%;
+  }
+  .right-side * {
+    width: 50%;
+    margin: 2px;
+    padding: 0px;
+    background-color: #00000000;
+  }
+  .right-side a {
+    display: none;
+  }
 }
